--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@strapi-community/cloudinary-media-library": "^1.0.3",
     "@strapi/plugin-cloud": "5.29.0",
     "@strapi/plugin-users-permissions": "5.29.0",
+    "@strapi/provider-upload-cloudinary": "^5.31.2",
     "@strapi/strapi": "5.29.0",
     "better-sqlite3": "11.3.0",
     "pg": "^8.16.3",
